# module4-ml-model-scoring-and-monitoring

./: .flake8  .pre-commit-config.yaml  apicalls.py  app.py  config.json  conjob.txt  deployment.py  diagnostics.py  fullprocess.py  ingestion.py  pyproject.toml  reporting.py  requirements.txt  scoring.py  training.py
common/: common.py  data.py  files.py  model.py
ingesteddata/: finaldata.csv  ingestedfiles.txt  trainedmodel.pkl
practicemodels/: apireturns.txt  encoder.pkl  latestscore.txt  trainedmodel.pkl
production_deployment/: encoder.pkl  trainedmodel.pkl
