[tool.poetry]
name = "module4-ml-model-scoring-and-monitoring"
version = "0.1.0"
description = ""
authors = ["giuliovn <giuliovnturi@gmail.com>"]
readme = "README.md"
packages = [{include = "module4_ml_model_scoring_and_monitoring"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
